--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -2,7 +2,8 @@
 <div *ngFor="let product of products">
 
 <h3>
-<a [title]="product.name + ' details'"> 
+<a [title]="product.name + ' details'"
+[routerLink]="['/products', product.id]">  <!-- router adds to the url of stackide as /product1-->
 {{ product.name }}
 </a>
 </h3>
