--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,12 @@
 
 <div class="container">
   <router-outlet></router-outlet>
+  <a routerLink="/cart" class="button fancy-button">
+    <i class="material-icons">shopping_cart</i>Checkout
+  </a>
 </div>
+
+
 
 <!-- 
 Copyright Google LLC. All Rights Reserved.
